银行卡列表修改bug

--- a/src/components/PaymentSet/PaymentSe.html
+++ b/src/components/PaymentSet/PaymentSe.html
@@ -435,9 +435,9 @@
                      class="input-item-input input_padding input_border border_radius input-account"
                      v-model="bankAccount"
                      :class="{'wrong-msg-border':bankAccountWrong}"
-                     @blur="testBankAccount"
                      readonly
               >
+<!--              @blur="testBankAccount"-->
             </div>
 
             <!--账户名错误提示 begin-->
