--- a/src/components/BusinessCenter/BusinessCenter.html
+++ b/src/components/BusinessCenter/BusinessCenter.html
@@ -9,7 +9,7 @@
         </div>
         <div class="transaction-header-right-currency strong">USDT</div>
         <div class="transaction-header-right-amount-box flex-center">
-          <div class="transaction-header-right-amount-title">余额：</div>
+          <div class="transaction-header-right-amount-title">可用余额：</div>
           <div class="transaction-header-right-amount-num strong">{{toFixed(account*1,8)}}</div>
           <div class="transaction-header-right-amount-unit">USDT</div>
         </div>
