修改资产计算

--- a/src/components/Transaction/Transaction.html
+++ b/src/components/Transaction/Transaction.html
@@ -49,7 +49,7 @@
         </router-link>
 <!--        <div class="transaction-header-right-amount-box flex-center">-->
 <!--          <div class="transaction-header-right-amount-title">余额：</div>-->
-<!--          <div class="transaction-header-right-amount-num strong">{{isLogin? account :'-&#45;&#45;'}}</div>-->
+<!--          <div class="transaction-header-right-amount-num strong">{{isLogin? toFixed(USDTAvailable*1,8) :'-&#45;&#45;'}}</div>-->
 <!--          <div class="transaction-header-right-amount-unit">USDT</div>-->
 <!--        </div>-->
 <!--        <div class="transaction-header-right-btn " @click="goToRecharge()">充值</div>-->
@@ -62,7 +62,7 @@
 <!--      <div class="transaction-header-right-currency strong">USDT</div>-->
 <!--      <div class="transaction-header-right-amount-box flex-center">-->
 <!--        <div class="transaction-header-right-amount-title">余额：</div>-->
-<!--        <div class="transaction-header-right-amount-num strong">{{isLogin? account :'-&#45;&#45;'}}</div>-->
+<!--        <div class="transaction-header-right-amount-num strong">{{isLogin? toFixed(USDTAvailable*1,8) :'-&#45;&#45;'}}</div>-->
 <!--        <div class="transaction-header-right-amount-unit">USDT</div>-->
 <!--      </div>-->
 <!--      <div class="transaction-header-right-btn " @click="goToRecharge()">充值</div>-->
