--- a/src/components/TransactionBuy/TransactionBuy.css
+++ b/src/components/TransactionBuy/TransactionBuy.css
@@ -46,8 +46,9 @@
 }
 
 .usdtpriceaaa1{
-  font-family: PingFangSC-Regular;
-  font-size: 20px;
+  font-family:PingFangSC-Medium,PingFang SC;
+  font-weight:500;
+  font-size: 24px;
   color: #172A4D;
   letter-spacing: 0;
   line-height: 28px;
