--- a/src/components/BusinessOrderConduct/BusinessOrderConduct.html
+++ b/src/components/BusinessOrderConduct/BusinessOrderConduct.html
@@ -3,8 +3,8 @@
 		<div class="business_order_table">
 			<!-- table 头 start -->
 			<div class="business_order_table_title flex-center ">
+        <div class="order">单号</div>
         <div class="type">类型</div>
-
 				<div class="price">单价(CNY)</div>
 				<!-- <div class="amount"></div> -->
         <div class="amount">数量(USDT)</div>
@@ -30,15 +30,15 @@
 			<div class="business_order_table_tbody text_block">
 				<Loading v-if="loading" />
 				<div class="business_order_table_tr flex-center" v-if="!loading && pageList.length!= 0" v-for="(item,index) in pageList" :key="index">
-<!--					<div class="order">{{item.id}}</div>-->
-					<div class="type" :class="item.side === 'BUY' ? 'text_green' : 'text_red'">{{item.side === 'BUY' ? '购买' : '出售'}}</div>
+          <div class="order">{{item.advertNo}}</div>
+          <div class="type" :class="item.side === 'BUY' ? 'text_green' : 'text_red'">{{item.side === 'BUY' ? '购买' : '出售'}}</div>
 					<div class="price" :class="item.side === 'BUY' ? 'text_green' : 'text_green'">{{toFixed(item.fixedPrice,2)}}</div>
 					<div class="amount">{{toFixed(item.volume,2)}}</div>
 <!--					<div class="money">{{toFixed(accMul(item.total,item.price),2)}}</div>-->
           <div class="complete">{{toFixed(item.tradingVolume,2)}}</div>
           <!-- <div class="money">已取消(USDT)</div> -->
           <div class="clock">{{toFixed(item.frozenVolume,2)}}</div>
-					<div class="num">{{toFixed(item.minAmount,2)}} - {{toFixed(item.maxAmount,2)}}</div>
+					<div class="num">{{toFixed(accMul(item.minAmount,item.fixedPrice),2)}} - {{toFixed(accMul(item.maxAmount,item.fixedPrice),2)}}</div>
 
 
 					<div class="create">{{formatDateUitl(item.createdAt)}}</div>
