--- a/src/components/BusinessOrderComplete/BusinessOrderComplete.html
+++ b/src/components/BusinessOrderComplete/BusinessOrderComplete.html
@@ -3,36 +3,39 @@
 		<div class="business_order_table">
 			<!-- table 头 start -->
 			<div class="business_order_table_title flex-center ">
-<!--				<div class="order">单号</div>-->
-				<div class="type">订单号</div>
-        <div class="orderstatus">类型</div>
+				<div class="order">单号</div>
+				<div class="type">类型</div>
+        <!--<div class="orderstatus">类型</div>-->
 				<div class="price">单价(CNY)</div>
 				<div class="amount">数量(USDT)</div>
+        <div class="complete">已成交(USDT)</div>
 				<div class="money">总金额(CNY)</div>
-<!--				<div class="num">交易限额(CNY)</div>-->
-<!--				<div class="create">创建时间</div>-->
-        <div class="jyobject">交易对象</div>
-				<div class="update">时间</div>
-<!--				<div class="pay_type text_center">支付方式</div>-->
+				<!--<div class="num">交易限额(CNY)</div>-->
+				<!--<div class="create">创建时间</div>-->
+        <!--<div class="jyobject">交易对象</div>-->
+        <div class="pay_type">支付方式</div>
+        <div class="update">完成时间</div>
 			</div>
 			<!-- table 头 end -->
 			<!-- table tbody start -->
 			<div class="business_order_table_tbody text_block">
 				<Loading v-if="loading" />
 				<div class="business_order_table_tr flex-center" v-else v-for="(item,index) in pageList" :key="index">
-<!--					<div class="order">{{item.id}}</div>-->
-					<div class="type" >{{item.id}}</div>
-          <div class="orderstatus" :class="item.postersType === 'BUY' ? 'text_green' : 'text_red'">{{item.postersType === 'BUY' ? '购买' : '出售'}}</div>
-          <div class="price" :class="item.postersType === 'BUY' ? 'text_green' : 'text_green'">{{toFixed(item.price,2)}}</div>
-					<div class="amount">{{toFixed(item.deal,2)}}</div>
-					<div class="money">{{toFixed(accMul(item.total,item.price),2)}}</div>
-<!--					<div class="num">{{toFixed(accMul(item.minLimit,item.price),2)}} - {{toFixed(accMul(item.total,item.price),2)}}</div>-->
-<!--					<div class="create">{{formatDateUitl(item.createdAt)}}</div>-->
-          <div class="jyobject">张三</div>
-					<div class="update">{{formatDateUitl(item.updatedAt)}}</div>
-<!--					<div class="pay_type payment_icon">-->
-<!--						<span class="icon card_icon"></span>-->
-<!--					</div>-->
+					<div class="order">{{item.advertNo}}</div>
+					<!--<div class="type" >{{item.id}}</div>-->
+          <div class="type" :class="item.side === 'BUY' ? 'text_green' : 'text_red'">{{item.side === 'BUY' ? '购买' : '出售'}}</div>
+          <div class="price" :class="item.side === 'BUY' ? 'text_green' : 'text_red'">{{toFixed(item.fixedPrice,2)}}</div>
+					<div class="amount">{{toFixed(item.volume,2)}}</div>
+          <div class="complete">{{toFixed(item.tradingVolume,2)}}</div>
+					<div class="money">{{toFixed(accMul(item.volume,item.fixedPrice),2)}}</div>
+					<!--<div class="num">{{toFixed(accMul(item.minLimit,item.price),2)}} - {{toFixed(accMul(item.total,item.price),2)}}</div>-->
+					<!--<div class="create">{{formatDateUitl(item.createdAt)}}</div>-->
+          <!--<div class="jyobject">张三</div>-->
+					<div class="pay_type payment_icon">
+						<!--<span class="icon card_icon"></span>-->
+                        银行卡
+					</div>
+          <div class="update">{{formatDateUitl(item.updatedAt)}}</div>
 				</div>
 			</div>
 			<!-- table tbody end -->
